# DSaA-labs

coursework2/: Button.cpp  Button.h  CMakeLists.txt  Cfg.cpp  Cfg.h  Field.cpp  Field.h  PZ.docx  SudokuSolver.cpp  SudokuSolver.h  TestSudokuGenerate.cpp  TestSudokuGenerate.h  UI.h  main.cpp
coursework2/testData/: test10_1.txt  test12_1.txt  test16_1.txt  test9_1.txt
coursework2/testData/10/: test1.txt  test10.txt  test100.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  test3.txt  test30.txt  test31.txt  test32.txt  test33.txt  test34.txt  test35.txt  test36.txt  test37.txt  test38.txt  test39.txt  test4.txt  test40.txt  test41.txt  test42.txt  test43.txt  test44.txt  (+60 more)
coursework2/testData/20/: test1.txt  test10.txt  test100.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  test3.txt  test30.txt  test31.txt  test32.txt  test33.txt  test34.txt  test35.txt  test36.txt  (+69 more)
kursach/: CMakeLists.txt  PZ.docx  README.md  Zadanie_na_kursovuyu_rabotu.docx  main.cpp  test.gcode
kursach/src/: Algorithm.cpp  Algorithm.h  Figures.cpp  Figures.h  Gcode.cpp  Gcode.h  Svg.cpp  Svg.h
kursach/test/: AlgorithmTest.cpp  AlgorithmTests.h  FigTests.cpp  FigTests.h  SvgParseTest.cpp  SvgParseTest.h
(+889 files in other folders)
